<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreatePlayerActivity"
    android:gravity="center"
    android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <TextView
        android:id="@+id/player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/create_player_welcome"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <ImageView
        android:id="@+id/createPlayerImage"
        android:layout_width="80dp"
        android:layout_height="80dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/firstname_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_lastname"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_age"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
<LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/create_player_localisation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_player_localisation"/>

    <ImageView
        android:id="@+id/create_player_localisation_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@android:drawable/ic_menu_compass"/>
</LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_player_player"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create_player_validate"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />
</LinearLayout>
</layout>